--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>Tailwind CSS Boilerplate</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Glegoo&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="css/main.css" />
 
-		<link rel="stylesheet" href="css/main.css" />
-	</head>
+    <title>Brotherland - Martina Zaninelli</title>
+  </head>
 
-	<body class="py-16 bg-gray-200">
-		<h1 class="mb-4 text-4xl text-center text-gray-800 font-bold font-sans">Tailwind CSS Boilerplate</h1>
-		<p class="text-sm text-center text-gray-600 font-sans">Get started by editing index.html</p>
-	</body>
+  <body class="absolute w-full bg-white pb-16 text-gray-700">
+    <div id="background" class="fixed -z-50 h-full w-full cursor-none overflow-visible">
+      <h1 class="mb-4 -rotate-90 text-center font-sans text-6xl font-bold uppercase text-gray-800">Brotherland</h1>
+    </div>
+    <header class="my-2 mx-auto w-3/5">
+      <nav class="flex justify-evenly font-playfair-display text-xl font-medium uppercase">
+        <div><a href="" alt="">About</a></div>
+        <div><a href="" alt="">Interviews</a></div>
+        <div><a href="" alt="">Exhibits</a></div>
+        <div><a href="" alt="">Contact</a></div>
+      </nav>
+    </header>
+    <main class="my-2 mx-auto w-4/5">
+      <div id="top-container" class="flex flex-row">
+        <div class="flex basis-3/12 flex-col justify-end p-4">
+          <div class="text-md text-left font-medium">
+            <p><span class="italic">Brotherland</span> is a visual research about nationalism, racism, violence and broken dreams.</p>
+            <br />
+            <p>
+              Images, archive material and interviews are used to reintegrate ignored stories into the larger history and bring them back
+              into the collective narrative.
+            </p>
+            <br />
+            <p>Brotherland is a collaborative project by Martina Zaninelli and Thomas Jacobs.</p>
+            <br />
+            <p>It's an ongoing work.</p>
+          </div>
+        </div>
+        <div class="flex basis-4/12 flex-col justify-between p-4">
+          <div>
+            <img src="/public/images/1D5A3870-55.jpg" />
+          </div>
+          <div class="mx-4 flex h-16 w-full content-center justify-center border-2 border-gray-700 align-middle text-sm">
+            <span>Listen to the interviews here</span>
+          </div>
+        </div>
+        <div class="basis-5/12 p-4">
+          <div>
+            <img src="/public/images/Martina_Zaninelli_Brotherland_02.jpg" />
+          </div>
+        </div>
+      </div>
+      <div id="middle-container mt-4"></div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
