--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,13 @@
   </head>
 
   <body class="absolute w-full bg-white pb-16 text-gray-700">
-    <div id="background" class="fixed -z-50 h-full w-full cursor-none overflow-visible">
-      <h1 class="mb-4 -rotate-90 text-center font-sans text-6xl font-bold uppercase text-gray-800">Brotherland</h1>
+    <div id="background" class="fixed -z-50 mt-2 cursor-none overflow-visible">
+      <h1
+        class="rotate-180 whitespace-nowrap text-center font-sans text-8xl font-bold uppercase text-gray-300"
+        style="writing-mode: vertical-rl"
+      >
+        Brotherland
+      </h1>
     </div>
     <header class="my-2 mx-auto w-3/5">
       <nav class="flex justify-evenly font-playfair-display text-xl font-medium uppercase">
