--- a/src/html/interviews.html
+++ b/src/html/interviews.html
@@ -4,9 +4,15 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
+        <script src="../js/script.js"></script>
         <title>Brotherland - Interviews</title>
     </head>
-    <body class="absolute w-full bg-white pb-16 text-gray-700">
+
+    <body
+        class="absolute w-full bg-white pb-16 text-gray-700"
+        onload="setParentElementHeight('interview-info'); imageHref('interview-image');"
+    >
+        <!-- Rotated Brotherland 'logo': -->
         <div id="background" class="fixed bottom-0 -z-50 cursor-none overflow-visible">
             <h1
                 class="rotate-180 whitespace-nowrap text-center font-sans text-8xl font-bold uppercase text-red-700"
@@ -15,24 +21,59 @@
                 Brotherland
             </h1>
         </div>
+
+        <!-- Nav header: -->
         <header class="my-2 mx-auto w-3/5">
-            <nav class="flex justify-evenly font-playfair-display text-xl font-medium uppercase">
-                <div><a href="" alt="">About</a></div>
-                <div><a href="" alt="">Interviews</a></div>
-                <div><a href="" alt="">Exhibits</a></div>
-                <div><a href="" alt="">Contact</a></div>
+            <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./about.html" alt="About">About</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./interviews.html" alt="Interviews">Interviews</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibits.html" alt="Exhibits">Exhibits</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./book.html" alt="Book">Book</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./contact.html" alt="Contact">Contact</a></div>
             </nav>
         </header>
+
+        <!-- Main: -->
         <main class="my-2 mx-auto w-4/5">
             <div id="top-container" class="font-glegoo">
-                <div id="macou1" class="mt-8 flex flex-row">
-                    <div class="flex basis-4/12 flex-col justify-start p-4">
-                        <div id="audio-player" class="flex h-16 w-full justify-start rounded-md bg-slate-800">
-                            <div class="mx-1 my-auto h-14 w-14 rounded-sm bg-slate-700 text-center text-slate-300">Play</div>
-                            <div class="mx-1 my-auto h-14 w-full rounded-sm bg-slate-700 text-center text-slate-300">
-                                Wie ein Theater beobachtet | David Macou
+                <!-- Macou1 -->
+                <div id="macou1" class="mt-32 flex flex-row">
+                    <div class="interview-info flex h-full basis-4/12 flex-col items-center justify-start px-4">
+                        <!-- Quote -->
+                        <blockquote
+                            class="flex flex-col justify-evenly self-start align-middle text-xl font-semibold italic text-gray-900 dark:text-white"
+                        >
+                            <svg
+                                aria-hidden="true"
+                                class="h-6 w-6 self-start text-gray-400 dark:text-gray-600"
+                                viewBox="0 0 24 27"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
+                                    fill="currentColor"
+                                />
+                            </svg>
+                            <p class="self-center px-4">Wie ein Theater beobachtet..</p>
+                            <div class="rotate-180">
+                                <svg
+                                    aria-hidden="true"
+                                    class="h-6 w-6 self-end text-gray-400 dark:text-gray-600"
+                                    viewBox="0 0 24 27"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
+                                        fill="currentColor"
+                                    />
+                                </svg>
                             </div>
-                        </div>
+                        </blockquote>
+
+                        <!-- Text -->
                         <div class="mt-6">
                             <p>I think our neighbors watched it all like a theaters.</p>
                             <br />
@@ -50,25 +91,70 @@
                             <br />
                             David Macou
                         </div>
-                    </div>
-                    <div class="flex basis-8/12 flex-col justify-end p-4">
-                        <img src="../../public/images/s-l1600.jpg" />
-                        <span class="text-xs">Postcard of Hoyerswerda, 70ies</span>
-                    </div>
-                </div>
-                <div class="h-24"></div>
-                <div id="macou2" class="flex flex-row">
-                    <div class="flex basis-8/12 flex-col justify-end p-4">
-                        <img src="../../public/images/image_courtesy_of_david_kennerth.jpg" />
-                        <span class="text-xs">Hoyerswerda 1991 - Image Courtesy of Detlev Kennerth</span>
-                    </div>
-                    <div class="flex basis-4/12 flex-col justify-start p-4">
-                        <div id="audio-player" class="flex h-16 w-full justify-end rounded-md bg-slate-800">
-                            <div class="mx-1 my-auto h-14 w-14 rounded-sm bg-slate-700 text-center text-slate-300">Play</div>
-                            <div class="mx-1 my-auto h-14 w-full rounded-sm bg-slate-700 text-center text-slate-300">
-                                Besuch bekommen | David Macou
+
+                        <!-- Begin Audio -->
+                        <div id="audio-player" class="mt-12 flex h-16 w-3/4 items-center rounded-md bg-slate-800 align-middle">
+                            <div class="my-auto mx-1 h-14 w-14 rounded-sm bg-slate-700 py-4 text-center text-slate-300">Play</div>
+                            <div class="my-auto mr-1 h-14 w-full rounded-sm bg-slate-700 py-4 text-center text-slate-300">
+                                Wie ein Theater beobachtet | D...
                             </div>
                         </div>
+                        <!-- End Audio -->
+                    </div>
+                    <!-- Begin Image -->
+                    <div class="relative flex basis-8/12 flex-col justify-end px-4">
+                        <img class="interview-image h-full rounded-md object-cover" src="../../public/images/s-l1600.jpg" />
+                        <span class="absolute -bottom-4 self-end text-xs">Postcard of Hoyerswerda, 70ies</span>
+                    </div>
+                    <!-- End Image -->
+                </div>
+
+                <!-- Macou2 -->
+                <div id="macou2" class="mt-32 flex flex-row">
+                    <!-- Begin Image -->
+                    <div class="relative flex basis-8/12 flex-col justify-end px-4">
+                        <img
+                            class="interview-image h-full rounded-md object-cover"
+                            src="../../public/images/image_courtesy_of_david_kennerth.jpg"
+                        />
+                        <span class="absolute -bottom-4 self-start text-xs">Hoyerswerda 1991 - Image Courtesy of Detlev Kennerth</span>
+                    </div>
+                    <!-- End Image -->
+                    <div class="interview-info flex h-full basis-4/12 flex-col items-center justify-start px-4">
+                        <!-- Quote: -->
+                        <blockquote
+                            class="flex flex-col justify-evenly self-end align-middle text-xl font-semibold italic text-gray-900 dark:text-white"
+                        >
+                            <svg
+                                aria-hidden="true"
+                                class="h-6 w-6 self-start text-gray-400 dark:text-gray-600"
+                                viewBox="0 0 24 27"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
+                                    fill="currentColor"
+                                />
+                            </svg>
+                            <p class="self-center px-4">Besuch bekommen..</p>
+                            <div class="rotate-180">
+                                <svg
+                                    aria-hidden="true"
+                                    class="h-6 w-6 self-end text-gray-400 dark:text-gray-600"
+                                    viewBox="0 0 24 27"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
+                                        fill="currentColor"
+                                    />
+                                </svg>
+                            </div>
+                        </blockquote>
+
+                        <!-- Text -->
                         <div class="mt-6">
                             <p>
                                 In August 1989 we realized that something was wrong, and in October there was this demonstration with GDR
@@ -97,13 +183,20 @@
                             <br />
                             David Macou
                         </div>
+
+                        <!-- Begin Audio -->
+                        <div id="audio-player" class="mt-12 flex h-16 w-3/4 justify-end rounded-md bg-slate-800">
+                            <div class="my-auto mx-1 h-14 w-14 rounded-sm bg-slate-700 py-4 text-center text-slate-300">Play</div>
+                            <div class="my-auto mr-1 h-14 w-full rounded-sm bg-slate-700 py-4 text-center text-slate-300">
+                                Besuch bekommen | David Macou
+                            </div>
+                        </div>
+                        <!-- End Audio -->
                     </div>
                 </div>
             </div>
         </main>
 
         <footer></footer>
-
-        <!-- <script src="scripts.js"></script> -->
     </body>
 </html>
