--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body class="absolute w-full bg-white pb-16 text-gray-700">
+        <!-- Rotated Brotherland 'logo': -->
         <div id="background" class="fixed bottom-0 -z-50 cursor-none overflow-visible">
             <h1
                 class="rotate-180 whitespace-nowrap text-center font-sans text-8xl font-bold uppercase text-red-700"
@@ -16,14 +17,20 @@
                 Brotherland
             </h1>
         </div>
+
+        <!-- Nav header: -->
         <header class="my-2 mx-auto w-3/5">
-            <nav class="flex justify-evenly font-playfair-display text-xl font-medium uppercase">
-                <div><a href="" alt="">About</a></div>
-                <div><a href="./html/interviews.html" alt="">Interviews</a></div>
-                <div><a href="" alt="">Exhibits</a></div>
-                <div><a href="" alt="">Contact</a></div>
+            <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./html/about.html" alt="About">About</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./html/interviews.html" alt="Interviews">Interviews</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./html/exhibits.html" alt="Exhibits">Exhibits</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./html/book.html" alt="Book">Book</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./html/contact.html" alt="Contact">Contact</a></div>
             </nav>
         </header>
+
+        <!-- Main: -->
         <main class="my-2 mx-auto w-4/5">
             <div id="top-container" class="flex flex-row">
                 <div class="flex basis-3/12 flex-col justify-end p-4">
@@ -59,6 +66,8 @@
             </div>
             <div id="middle-container mt-4"></div>
         </main>
+
+        <!-- Footer:  -->
         <footer></footer>
     </body>
 </html>
