--- a/src/html/interviews.html
+++ b/src/html/interviews.html
@@ -35,11 +35,11 @@
         </header>
 
         <!-- Main: -->
-        <main class="my-2 mx-auto w-4/5">
-            <div id="top-container" class="font-glegoo">
+        <main class="my-2 mx-auto w-3/4">
+            <div id="top-container" class="pt-12 font-glegoo">
                 <!-- Macou1 -->
-                <div id="macou1" class="mt-32 flex flex-row">
-                    <div class="interview-info flex h-full basis-4/12 flex-col items-center justify-start px-4">
+                <div id="macou1" class="mb-32 flex flex-row">
+                    <div class="interview-info flex h-full basis-1/2 flex-col items-center justify-start">
                         <!-- Quote -->
                         <blockquote
                             class="flex flex-col justify-evenly self-start align-middle text-xl font-semibold italic text-gray-900 dark:text-white"
@@ -96,13 +96,13 @@
                         <div id="audio-player" class="mt-12 flex h-16 w-3/4 items-center rounded-md bg-slate-800 align-middle">
                             <div class="my-auto mx-1 h-14 w-14 rounded-sm bg-slate-700 py-4 text-center text-slate-300">Play</div>
                             <div class="my-auto mr-1 h-14 w-full rounded-sm bg-slate-700 py-4 text-center text-slate-300">
-                                Wie ein Theater beobachtet | D...
+                                Wie ein Theater beobachtet
                             </div>
                         </div>
                         <!-- End Audio -->
                     </div>
                     <!-- Begin Image -->
-                    <div class="relative flex basis-8/12 flex-col justify-end px-4">
+                    <div class="relative flex basis-8/12 flex-col justify-end pl-8">
                         <img class="interview-image h-full rounded-md object-cover" src="../../public/images/s-l1600.jpg" />
                         <span class="absolute -bottom-4 self-end text-xs">Postcard of Hoyerswerda, 70ies</span>
                     </div>
@@ -110,9 +110,9 @@
                 </div>
 
                 <!-- Macou2 -->
-                <div id="macou2" class="mt-32 flex flex-row">
+                <div id="macou2" class="flex flex-row">
                     <!-- Begin Image -->
-                    <div class="relative flex basis-8/12 flex-col justify-end px-4">
+                    <div class="relative flex basis-8/12 flex-col justify-end pr-8">
                         <img
                             class="interview-image h-full rounded-md object-cover"
                             src="../../public/images/image_courtesy_of_david_kennerth.jpg"
@@ -120,7 +120,7 @@
                         <span class="absolute -bottom-4 self-start text-xs">Hoyerswerda 1991 - Image Courtesy of Detlev Kennerth</span>
                     </div>
                     <!-- End Image -->
-                    <div class="interview-info flex h-full basis-4/12 flex-col items-center justify-start px-4">
+                    <div class="interview-info flex h-full basis-1/2 flex-col items-center justify-start">
                         <!-- Quote: -->
                         <blockquote
                             class="flex flex-col justify-evenly self-end align-middle text-xl font-semibold italic text-gray-900 dark:text-white"
@@ -185,10 +185,10 @@
                         </div>
 
                         <!-- Begin Audio -->
-                        <div id="audio-player" class="mt-12 flex h-16 w-3/4 justify-end rounded-md bg-slate-800">
+                        <div id="audio-player" class="mt-12 flex h-16 w-3/4 justify-end rounded-md rounded-t-none bg-slate-800">
                             <div class="my-auto mx-1 h-14 w-14 rounded-sm bg-slate-700 py-4 text-center text-slate-300">Play</div>
                             <div class="my-auto mr-1 h-14 w-full rounded-sm bg-slate-700 py-4 text-center text-slate-300">
-                                Besuch bekommen | David Macou
+                                Besuch bekommen
                             </div>
                         </div>
                         <!-- End Audio -->
