--- a/src/html/interviews.html
+++ b/src/html/interviews.html
@@ -56,6 +56,7 @@
                                     fill="currentColor"
                                 />
                             </svg>
+                            <!-- TODO Errors out on some kind of dark mode switcher -->
                             <p class="self-center px-4">Wie ein Theater beobachtet..</p>
                             <div class="rotate-180">
                                 <svg
