--- a/src/index.html
+++ b/src/index.html
@@ -17,117 +17,17 @@
                 Brotherland
             </h1>
         </div>
+        <div class="flex flex-col items-center justify-between"><div class="h-[75vh] w-[75vw] bg-orange-300"></div></div>
 
-        <!-- Nav header: -->
-        <header class="my-2 mx-auto w-3/5">
-            <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-                <a href="/" alt="Home"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Home</div></a>
-                <a href="./html/about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
-                <a href="./html/interviews.html" alt="Interviews"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interviews</div></a>
-                <a href="./html/exhibits.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibits</div></a>
-                <a href="./html/book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
-                <a href="./html/contact.html" alt="Contact"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Contact</div></a>
-            </nav>
-        </header>
-
-        <!-- Main: -->
-        <main class="my-2 mx-auto w-3/4">
-            <div id="top-container" class="flex flex-row pt-12">
-                <!-- Text -->
-                <div class="flex flex-col justify-start pr-4 pb-10">
-                    <div class="text-md font-medium">
-                        <p>
-                            <span class="italic">Brotherland</span> is a visual research about nationalism, racism, violence and broken
-                            dreams.
-                        </p>
-                        <br />
-                        <p>
-                            Images, archive material and interviews are used to reintegrate ignored stories into the larger history and
-                            bring them back into the collective narrative.
-                        </p>
-                        <br />
-                        <p>Brotherland is a collaborative project by Martina Zaninelli and Thomas Jacobs.</p>
-                        <br />
-                        <p>It's an ongoing work.</p>
-                        <br />
-                        <a href="./html/interviews.html">
-                            <div
-                                class="mx-4 flex h-16 w-3/4 content-center justify-center border-2 border-gray-700 p-1 text-center align-middle text-sm"
-                            >
-                                <span>Listen to the interviews here</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <!-- End Text -->
-
-                <!-- Images  -->
-                <div class="overflow-hidden text-neutral-700">
-                    <div class="-m-1 flex flex-wrap md:-m-2">
-                        <div class="flex w-1/2 flex-wrap">
-                            <div class="w-1/2 p-1 md:p-2">
-                                <img
-                                    alt="gallery"
-                                    class="block h-full w-full rounded-md object-cover object-center"
-                                    src="/public/images/Martina_Zaninelli_Brotherland_03.jpg"
-                                />
-                            </div>
-                            <div class="w-1/2 p-1 md:p-2">
-                                <img
-                                    alt="gallery"
-                                    class="block h-full w-full rounded-md object-cover object-center"
-                                    src="/public/images/Martina_Zaninelli_Brotherland_09.jpg"
-                                />
-                            </div>
-                            <div class="w-full p-1 md:p-2">
-                                <img
-                                    alt="gallery"
-                                    class="block h-full w-full rounded-md object-cover object-center"
-                                    src="/public/images/Martina_Zaninelli_Brotherland_02.jpg"
-                                />
-                            </div>
-                        </div>
-                        <div class="flex w-1/2 flex-wrap">
-                            <div class="w-full p-1 md:p-2">
-                                <img
-                                    alt="gallery"
-                                    class="block h-full w-full rounded-md object-cover object-center"
-                                    src="/public/images/Martina_Zaninelli_Brotherland_10.jpg"
-                                />
-                            </div>
-                            <div class="w-1/2 p-1 md:p-2">
-                                <img
-                                    alt="gallery"
-                                    class="block h-full w-full rounded-md object-cover object-center"
-                                    src="/public/images/Martina_Zaninelli_Brotherland_18.jpg"
-                                />
-                            </div>
-                            <div class="w-1/2 p-1 md:p-2">
-                                <img
-                                    alt="gallery"
-                                    class="block h-full w-full rounded-md object-cover object-center"
-                                    src="/public/images/Martina_Zaninelli_Brotherland_19.jpg"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- <div class="flex basis-4/12 flex-col justify-between p-4">
-                    <div>
-                        <img src="/public/images/1D5A3870-55.jpg" />
-                    </div>
-                </div>
-                <div class="basis-5/12 p-4">
-                    <div>
-                        <img src="/public/images/Martina_Zaninelli_Brotherland_02.jpg" />
-                    </div>
-                </div> -->
-
-                <!-- Images end -->
-            </div>
-            <div id="middle-container mt-4"></div>
-        </main>
+        <!-- Nav : -->
+        <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
+            <a href="/" alt="Home"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Home</div></a>
+            <a href="./html/about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
+            <a href="./html/interviews.html" alt="Interviews"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interviews</div></a>
+            <a href="./html/exhibits.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibits</div></a>
+            <a href="./html/book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
+            <a href="./html/contact.html" alt="Contact"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Contact</div></a>
+        </nav>
 
         <!-- Footer:  -->
         <footer></footer>
