--- a/src/html/about.html
+++ b/src/html/about.html
@@ -24,7 +24,7 @@
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./about.html" alt="About">About</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./interviews.html" alt="Interviews">Interviews</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibits.html" alt="Exhibits">Exhibits</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibit.html" alt="Exhibit">Exhibit</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./book.html" alt="Book">Book</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./contact.html" alt="Contact">Contact</a></div>
             </nav>
@@ -32,7 +32,12 @@
 
         <!-- Main: -->
         <main class="my-2 mx-auto w-3/4">
-            <div id="top-container" class="font-glegoo">About</div>
+            <div id="top-container" class="font-glegoo">
+                <h4>Kurze Biographie?</h4>
+
+                Platz um Copyright/Copyleft zu stellen. Kontaktmöglichkeiten Platz für die Symbole des Dokumentationszentrum Lichtenhagen
+                und der Amadeu-Antonio-Stiftung
+            </div>
         </main>
 
         <footer></footer>
