--- a/src/html/book.html
+++ b/src/html/book.html
@@ -24,7 +24,7 @@
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./about.html" alt="About">About</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./interviews.html" alt="Interviews">Interviews</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibits.html" alt="Exhibits">Exhibits</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibit.html" alt="Exhibit">Exhibit</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./book.html" alt="Book">Book</a></div>
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./contact.html" alt="Contact">Contact</a></div>
             </nav>
