--- a/src/index_old.html
+++ b/src/index_old.html
@@ -24,7 +24,7 @@
                 <a href="/" alt="Home"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Home</div></a>
                 <a href="./html/about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
                 <a href="./html/interviews.html" alt="Interviews"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interviews</div></a>
-                <a href="./html/exhibits.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibits</div></a>
+                <a href="./html/exhibit.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibits</div></a>
                 <a href="./html/book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
                 <a href="./html/contact.html" alt="Contact"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Contact</div></a>
             </nav>
