--- a/src/html/interviews/interview1.html
+++ b/src/html/interviews/interview1.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
         <script src="../js/script.js"></script>
-        <title>Brotherland - Interviews</title>
+        <title>Brotherland - Interview 1 Macou</title>
     </head>
 
     <body
@@ -108,92 +108,6 @@
                         <span class="absolute -bottom-4 self-end text-xs">Postcard of Hoyerswerda, 70ies</span>
                     </div>
                     <!-- End Image -->
-                </div>
-
-                <!-- Macou2 -->
-                <div id="macou2" class="flex flex-row">
-                    <!-- Begin Image -->
-                    <div class="relative flex basis-8/12 flex-col justify-end pr-8">
-                        <img
-                            class="interview-image h-full rounded-md object-cover"
-                            src="../../public/images/image_courtesy_of_david_kennerth.jpg"
-                        />
-                        <span class="absolute -bottom-4 self-start text-xs">Hoyerswerda 1991 - Image Courtesy of Detlev Kennerth</span>
-                    </div>
-                    <!-- End Image -->
-                    <div class="interview-info flex h-full basis-1/2 flex-col items-center justify-start">
-                        <!-- Quote: -->
-                        <blockquote
-                            class="flex flex-col justify-evenly self-end align-middle text-xl font-semibold italic text-gray-900 dark:text-white"
-                        >
-                            <svg
-                                aria-hidden="true"
-                                class="h-6 w-6 self-start text-gray-400 dark:text-gray-600"
-                                viewBox="0 0 24 27"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                    d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
-                                    fill="currentColor"
-                                />
-                            </svg>
-                            <p class="self-center px-4">Besuch bekommen..</p>
-                            <div class="rotate-180">
-                                <svg
-                                    aria-hidden="true"
-                                    class="h-6 w-6 self-end text-gray-400 dark:text-gray-600"
-                                    viewBox="0 0 24 27"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
-                                        fill="currentColor"
-                                    />
-                                </svg>
-                            </div>
-                        </blockquote>
-
-                        <!-- Text -->
-                        <div class="mt-6">
-                            <p>
-                                In August 1989 we realized that something was wrong, and in October there was this demonstration with GDR
-                                citizens.
-                            </p>
-                            <br />
-                            <p>
-                                We were afraid and didn't go to the demonstration. In 1990 we had our first "visit" from more than a hundred
-                                young people. These young people, neo-Nazis, came to our dormitory.
-                            </p>
-                            <br />
-                            <p>
-                                They broke everything, threw stones, and so on. They told us that they would come again. Then it was
-                                September 1991 and the youths came again. And they broke our dormitory again.
-                            </p>
-                            <p>
-                                Those were bad experiences I had there in the last two years, after living there for twelve years. 1990 and
-                                1991 were very, very bad for me. Until today I don't forget those experiences, those aggressions I saw and
-                                experienced.
-                            </p>
-                            <br />
-                            [...] They were chanting: "Foreigners out. Germany for the Germans. Pack up and fly home. You are no longer
-                            welcome." so that Germany would be free of foreigners. And of course, the company listened to that and told us
-                            that we had to pack up and go home. And we then flew home.
-                            <br />
-                            <br />
-                            David Macou
-                        </div>
-
-                        <!-- Begin Audio -->
-                        <div id="audio-player" class="mt-12 flex h-16 w-3/4 justify-end rounded-md rounded-t-none bg-slate-800">
-                            <div class="my-auto mx-1 h-14 w-14 rounded-sm bg-slate-700 py-4 text-center text-slate-300">Play</div>
-                            <div class="my-auto mr-1 h-14 w-full rounded-sm bg-slate-700 py-4 text-center text-slate-300">
-                                Besuch bekommen
-                            </div>
-                        </div>
-                        <!-- End Audio -->
-                    </div>
                 </div>
             </div>
         </main>
