--- a/src/html/project.html
+++ b/src/html/project.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="../css/main.css" />
-        <title>Brotherland - Contact</title>
+        <title>Brotherland - Book</title>
     </head>
 
     <body class="absolute w-full bg-white pb-16 text-gray-700">
@@ -20,19 +20,18 @@
 
         <!-- Nav header: -->
         <header class="my-2 mx-auto w-3/5">
-            <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./about.html" alt="About">About</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./interviews.html" alt="Interviews">Interviews</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibit.html" alt="Exhibit">Exhibit</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./book.html" alt="Book">Book</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./contact.html" alt="Contact">Contact</a></div>
+            <nav class="flex justify-evenly font-playfair-display text-2xl font-medium">
+                <a href="./project.html" alt="Project"><div class="project-menu rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a>
+                <a href="./interviews.html" alt="Interviews"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interviews</div></a>
+                <a href="./book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
+                <a href="./exhibit.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibit</div></a>
+                <a href="./about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
             </nav>
         </header>
 
         <!-- Main: -->
         <main class="my-2 mx-auto w-3/4">
-            <div id="top-container" class="font-glegoo">Contact</div>
+            <div id="top-container" class="font-glegoo">Book</div>
         </main>
 
         <footer></footer>
