--- a/src/html/interviews/interview1.html
+++ b/src/html/interviews/interview1.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="../css/main.css" />
-        <script src="../js/script.js"></script>
+        <link rel="stylesheet" type="text/css" href="../../css/main.css" />
+        <script src="../../js/script.js"></script>
         <title>Brotherland - Interview 1 Macou</title>
     </head>
 
@@ -26,11 +26,11 @@
         <header class="my-2 mx-auto w-3/5">
             <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
                 <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./about.html" alt="About">About</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./interviews.html" alt="Interviews">Interviews</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./exhibit.html" alt="Exhibit">Exhibit</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./book.html" alt="Book">Book</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="./contact.html" alt="Contact">Contact</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../about.html" alt="About">About</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../interviews.html" alt="Interviews">Interviews</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../exhibit.html" alt="Exhibit">Exhibit</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../book.html" alt="Book">Book</a></div>
+                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../contact.html" alt="Contact">Contact</a></div>
             </nav>
         </header>
 
@@ -104,7 +104,7 @@
                     </div>
                     <!-- Begin Image -->
                     <div class="relative flex basis-8/12 flex-col justify-end pl-8">
-                        <img class="interview-image h-full rounded-md object-cover" src="../../public/images/s-l1600.jpg" />
+                        <img class="interview-image h-full rounded-md object-cover" src="../../../public/images/s-l1600.jpg" />
                         <span class="absolute -bottom-4 self-end text-xs">Postcard of Hoyerswerda, 70ies</span>
                     </div>
                     <!-- End Image -->
