--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,66 @@
 
         <!-- Nav : -->
         <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-            <a href="./html/project.html" alt="Project"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a>
-            <a href="./html/interviews.html" alt="Interviews"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interviews</div></a>
+            <div class="wrap-collapsible">
+                <input id="collapsible-1" class="collapsible-toggle" type="checkbox" />
+                <label for="collapsible-1" class="collapsible-toggle-label">Projects</label>
+                <div class="collapsible-content">
+                    <div class="collapsible-content-inner">
+                        <ul>
+                            <li>
+                                <a href="./html/projects/project1.html" alt="Project 1"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a
+                                >
+                            </li>
+                            <li>
+                                <a href="./html/projects/project2.html" alt="Project 2"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a
+                                >
+                            </li>
+                            <li>
+                                <a href="./html/projects/project3.html" alt="Project 3"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a
+                                >
+                            </li>
+                            <li>
+                                <a href="./html/projects/project4.html" alt="Project 4"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Project</div></a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="wrap-collapsible">
+                <input id="collapsible-2" class="collapsible-toggle" type="checkbox" />
+                <label for="collapsible-2" class="collapsible-toggle-label">Interviews</label>
+                <div class="collapsible-content">
+                    <div class="collapsible-content-inner">
+                        <ul>
+                            <li>
+                                <a href="./html/interviews/interview1.html" alt="Interview 1"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 1</div></a
+                                >
+                            </li>
+                            <li>
+                                <a href="./html/interviews/interview2.html" alt="Interview 2"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 2</div></a
+                                >
+                            </li>
+                            <li>
+                                <a href="./html/interviews/interview3.html" alt="Interview 3"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 3</div></a
+                                >
+                            </li>
+                            <li>
+                                <a href="./html/interviews/interview4.html" alt="Interview 4"
+                                    ><div class="rounded-md px-4 py-2 hover:bg-gray-300">Interview 4</div></a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <a href="./html/book.html" alt="Book"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Book</div></a>
             <a href="./html/exhibit.html" alt="Exhibits"><div class="rounded-md px-4 py-2 hover:bg-gray-300">Exhibit</div></a>
             <a href="./html/about.html" alt="About"><div class="rounded-md px-4 py-2 hover:bg-gray-300">About</div></a>
