--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Book"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Exhibits"}' />
     </head>
 
     <body class="bg-white text-gray-700">
@@ -9,6 +9,6 @@
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "./"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">Buch!</main>
+        <main class="m-auto sm:w-full md:w-4/5">Exhibits</main>
     </body>
 </html>
