--- a/src/html/interviews/interview3.html
+++ b/src/html/interviews/interview3.html
@@ -1,41 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="../../css/main.css" />
-        <script src="../../js/script.js"></script>
-        <title>Brotherland - Interview 3</title>
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - IV3"}' />
     </head>
 
-    <body
-        class="absolute w-full bg-white pb-16 text-gray-700"
-        onload="setParentElementHeight('interview-info'); imageHref('interview-image');"
-    >
-        <!-- Rotated Brotherland 'logo': -->
-        <div id="background" class="fixed bottom-0 -z-50 cursor-none overflow-visible">
-            <h1
-                class="rotate-180 whitespace-nowrap text-center font-sans text-8xl font-bold uppercase text-red-700"
-                style="writing-mode: vertical-rl"
-            >
-                Brotherland
-            </h1>
-        </div>
-
-        <!-- Nav header: -->
-        <header class="my-2 mx-auto w-3/5">
-            <nav class="flex justify-evenly font-playfair-display text-2xl font-medium uppercase">
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="/" alt="Home">Home</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../about.html" alt="About">About</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../interviews.html" alt="Interviews">Interviews</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../exhibit.html" alt="Exhibit">Exhibit</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../book.html" alt="Book">Book</a></div>
-                <div class="rounded-md px-4 py-2 hover:bg-gray-300"><a href="../contact.html" alt="Contact">Contact</a></div>
-            </nav>
+    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+        <header>
+            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../"}'></include>
         </header>
 
         <!-- Main: -->
-        <main class="my-2 mx-auto w-3/4">
+        <main class="m-auto sm:w-full md:w-4/5">
             <div id="top-container" class="pt-12 font-glegoo">
                 <!-- Macou2 -->
                 <div id="macou2" class="flex flex-row">
