--- a/src/html/about.html
+++ b/src/html/about.html
@@ -1,38 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="../css/main.css" />
-        <title>Brotherland - About</title>
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Project"}' />
     </head>
 
-    <body class="absolute w-full bg-white pb-16 text-gray-700">
-        <!-- Rotated Brotherland 'logo': -->
-        <div id="background" class="fixed bottom-0 -z-50 cursor-none overflow-visible">
-            <h1
-                class="rotate-180 whitespace-nowrap text-center font-sans text-8xl font-bold uppercase text-red-700"
-                style="writing-mode: vertical-rl"
-            >
-                Brotherland
-            </h1>
-        </div>
+    <body class="bg-white text-gray-700">
+        <header>
+            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./"}'></include>
+        </header>
 
-        <!-- Nav header: -->
-        <header class="my-2 mx-auto w-3/5"></header>
-
-        <!-- Main: -->
-        <main class="my-2 mx-auto w-3/4">
-            <div id="top-container" class="font-glegoo">
-                <h4>Kurze Biographie?</h4>
-
-                Platz um Copyright/Copyleft zu stellen. Kontaktmöglichkeiten Platz für die Symbole des Dokumentationszentrum Lichtenhagen
-                und der Amadeu-Antonio-Stiftung
-            </div>
+        <main class="m-auto sm:w-full md:w-4/5">
+            Kurze Biographie? Platz um Copyright/Copyleft zu stellen. Kontaktmöglichkeiten Platz für die Symbole des Dokumentationszentrum
+            Lichtenhagen und der Amadeu-Antonio-Stiftung
         </main>
-
-        <footer></footer>
-
-        <!-- <script src="scripts.js"></script> -->
     </body>
 </html>
