--- a/src/html/interviews/interview3.html
+++ b/src/html/interviews/interview3.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <script locals>
+        module.exports = {
+            lol: { name: "Scrum" },
+            htmls: "<p>LA LA LA</p>",
+            str: "sdtrjjddj",
+            text: {
+                main: [
+                    "I think our neighbors watched it all like a theaters.",
+                    `We had no solidarity from our neighbors who had lived with us for twelve years. They just watched through the window or from further away. 
+					They tried to see what was going on between the young people shouting slogans and the police standing there
+                    with dogs. They were just spectators, there was no solidarity until we flew home. We didn't get any
+                    solidarity from our neighbors from Hoyerswerda.`,
+                    `In 2019 I was again in Hoyerswerda, there I participated in a meeting with my former neighbors. They told me, ‘We didn't see that!’ But I do not think it was so.`,
+                ],
+                author: "David Macou",
+                authorLink: "../bio/macou.html",
+            },
+        };
+    </script>
+
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - IV3"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - David Macou"}' />
     </head>
 
     <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
@@ -12,94 +32,32 @@
         <!-- Main: -->
         <main class="m-auto sm:w-full md:w-4/5">
             <div id="top-container" class="pt-12 font-glegoo">
-                <!-- Macou2 -->
-                <div id="macou2" class="flex flex-row">
-                    <!-- Begin Image -->
-                    <div class="relative flex basis-8/12 flex-col justify-end pr-8">
-                        <img
-                            class="interview-image h-full rounded-md object-cover"
-                            src="../../../public/images/image_courtesy_of_david_kennerth.jpg"
-                        />
-                        <span class="absolute -bottom-4 self-start text-xs">Hoyerswerda 1991 - Image Courtesy of Detlev Kennerth</span>
-                    </div>
-                    <!-- End Image -->
+                <!-- Macou1 -->
+                <div id="macou1" class="mb-32 flex flex-row">
                     <div class="interview-info flex h-full basis-1/2 flex-col items-center justify-start">
-                        <!-- Quote: -->
-                        <blockquote
-                            class="flex flex-col justify-evenly self-end align-middle text-xl font-semibold italic text-gray-900 dark:text-white"
-                        >
-                            <svg
-                                aria-hidden="true"
-                                class="h-6 w-6 self-start text-gray-400 dark:text-gray-600"
-                                viewBox="0 0 24 27"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                    d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
-                                    fill="currentColor"
-                                />
-                            </svg>
-                            <p class="self-center px-4">Besuch bekommen..</p>
-                            <div class="rotate-180">
-                                <svg
-                                    aria-hidden="true"
-                                    class="h-6 w-6 self-end text-gray-400 dark:text-gray-600"
-                                    viewBox="0 0 24 27"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        d="M14.017 18L14.017 10.609C14.017 4.905 17.748 1.039 23 0L23.995 2.151C21.563 3.068 20 5.789 20 8H24V18H14.017ZM0 18V10.609C0 4.905 3.748 1.038 9 0L9.996 2.151C7.563 3.068 6 5.789 6 8H9.983L9.983 18L0 18Z"
-                                        fill="currentColor"
-                                    />
-                                </svg>
-                            </div>
-                        </blockquote>
+                        <!-- Quote -->
+                        <include src="./partials/interv_quote.html" locals='{"quote": "Wie ein Theater beobachtet.."}'></include>
 
                         <!-- Text -->
-                        <div class="mt-6">
-                            <p>
-                                In August 1989 we realized that something was wrong, and in October there was this demonstration with GDR
-                                citizens.
-                            </p>
-                            <br />
-                            <p>
-                                We were afraid and didn't go to the demonstration. In 1990 we had our first "visit" from more than a hundred
-                                young people. These young people, neo-Nazis, came to our dormitory.
-                            </p>
-                            <br />
-                            <p>
-                                They broke everything, threw stones, and so on. They told us that they would come again. Then it was
-                                September 1991 and the youths came again. And they broke our dormitory again.
-                            </p>
-                            <p>
-                                Those were bad experiences I had there in the last two years, after living there for twelve years. 1990 and
-                                1991 were very, very bad for me. Until today I don't forget those experiences, those aggressions I saw and
-                                experienced.
-                            </p>
-                            <br />
-                            [...] They were chanting: "Foreigners out. Germany for the Germans. Pack up and fly home. You are no longer
-                            welcome." so that Germany would be free of foreigners. And of course, the company listened to that and told us
-                            that we had to pack up and go home. And we then flew home.
-                            <br />
-                            <br />
-                            David Macou
-                        </div>
+                        <scope with="text">
+                            <include src="./partials/interv_text.html"></include>
+                        </scope>
 
-                        <!-- Begin Audio -->
-                        <div id="audio-player" class="mt-12 flex h-16 w-3/4 justify-end rounded-md rounded-t-none bg-slate-800">
-                            <div class="my-auto mx-1 h-14 w-14 rounded-sm bg-slate-700 py-4 text-center text-slate-300">Play</div>
-                            <div class="my-auto mr-1 h-14 w-full rounded-sm bg-slate-700 py-4 text-center text-slate-300">
-                                Besuch bekommen
-                            </div>
-                        </div>
-                        <!-- End Audio -->
+                        <br />
+
+                        <!-- Audio -->
+                        <include
+                            src="./partials/interv_audio.html"
+                            locals='{"filePath": "/public/audio/DM_ 01.mp3", "title": "Like Theater"}'
+                        ></include>
                     </div>
+                    <!-- Image -->
+                    <include
+                        src="./partials/interv_img.html"
+                        locals='{"filePath": "/public/images/DM_ 01.jpg", "caption": "Postcard of Hoyerswerda, 70ies"}'
+                    ></include>
                 </div>
             </div>
         </main>
-
-        <footer></footer>
     </body>
 </html>
