--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -6,7 +6,7 @@
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./"}'></include>
+            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./", "active": "exhibits"}'></include>
         </header>
 
         <main class="m-auto sm:w-full md:w-4/5">Exhibits</main>
