--- a/src/html/interviews/interview1.html
+++ b/src/html/interviews/interview1.html
@@ -2,9 +2,6 @@
 <html>
     <script locals>
         module.exports = {
-            lol: { name: "Scrum" },
-            htmls: "<p>LA LA LA</p>",
-            str: "sdtrjjddj",
             text: {
                 main: [
                     "I think our neighbors watched it all like a theaters.",
@@ -26,7 +23,7 @@
 
     <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../"}'></include>
+            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "interview1"}'></include>
         </header>
 
         <!-- Main: -->
