--- a/src/html/project.html
+++ b/src/html/project.html
@@ -6,7 +6,7 @@
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./"}'></include>
+            <include src="./partials/nav_header.html" locals='{"pathPrefix": "./", "active": "project"}'></include>
         </header>
 
         <main class="m-auto sm:w-full md:w-4/5">
@@ -20,7 +20,7 @@
                     <!-- Image placeholders: -->
                     <a href="virtual-exhibits/ve1.html">
                         <div
-                            class="h-80 w-96 rounded-sm bg-slate-600 hover:cursor-[url(../../public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
+                            class="h-80 w-96 rounded-sm bg-slate-600 transition-colors ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
                         ></div>
                     </a>
                 </div>
@@ -31,7 +31,7 @@
                     <!-- Image placeholders: -->
                     <a href="virtual-exhibits/ve2.html">
                         <div
-                            class="h-full w-96 rounded-sm bg-slate-600 hover:cursor-[url(../../public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
+                            class="h-full w-96 rounded-sm bg-slate-600 transition-colors ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
                         ></div>
                     </a>
                 </div>
@@ -75,7 +75,7 @@
                     <!-- Image placeholders: -->
                     <a href="virtual-exhibits/ve3.html">
                         <div
-                            class="h-full w-96 rounded-sm bg-slate-600 hover:cursor-[url(../../public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
+                            class="h-full w-96 rounded-sm bg-slate-600 transition-colors ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
                         ></div>
                     </a>
                 </div>
