--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -6,13 +6,13 @@
 
     <body class="bg-white text-gray-700">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../"}'></include>
+            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
         <main class="m-auto sm:w-full md:w-4/5">
             Virtual Exhibit 2
-            <br/>
-            <a href="./ve3.html" alt="Virtual Exhibit 3" >Next: Virtual Exhibit 3</a>
+            <br />
+            <a href="./ve3.html" alt="Virtual Exhibit 3">Next: Virtual Exhibit 3</a>
         </main>
     </body>
 </html>
