--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="mb-2 h-4" />
         <nav>
-            <include src="./partials/nav.html" locals='{"pathNavPrefix": "./html"}'></include>
+            <include src="./partials/nav.html" locals='{"pathNavPrefix": "./html", "active": "index"}'></include>
         </nav>
     </body>
 </html>
