--- a/src/html/interviews/interview4.html
+++ b/src/html/interviews/interview4.html
@@ -26,7 +26,7 @@
 
     <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
-            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../"}'></include>
+            <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "interview4"}'></include>
         </header>
 
         <!-- Main: -->
