--- a/src/html/book.html
+++ b/src/html/book.html
@@ -9,6 +9,6 @@
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "./", "active": "book"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">Buch!</main>
+        <main class="m-auto sm:w-full md:w-4/5">Coming soon</main>
     </body>
 </html>
