--- a/src/html/interviews/intrvw_ia01.html
+++ b/src/html/interviews/intrvw_ia01.html
@@ -22,7 +22,7 @@ gefreut haben. Und am Tierpark hatten wir schöne Zeiten hier. Nur
 solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger von Hitler waren.`,
                 ],
                 author: "Ibraimo Alberto",
-                authorLink: "../bio/alberto.html",
+                authorLink: "../bio.html#alberto",
                 audioFilePath: "/public/audio/IA_ 01.mp3",
                 imageFilePath: "/public/images/IA_ 01.jpg",
                 imageCaption: "Berlin-Friedrichsfelde. Postkarte der 80er Jahre",
@@ -41,7 +41,7 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
 
         <!-- Main: -->
         <main class="m-auto sm:w-full md:w-4/5">
-            <div id="top-container" class="pt-8 font-glegoo">
+            <div id="top-container" class="pt-6">
                 <!-- Macou1 -->
                 <div id="macou1" class="flex flex-row flex-wrap">
                     <!-- Quote -->
@@ -52,7 +52,6 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
 
                         <!-- Interview Main -->
                         <div class="interview-info flex h-full basis-1/2 flex-col items-center justify-start">
-                            <br />
 
                             <!-- Text -->
                             <include src="./partials/interv_text.html"></include>
