--- a/src/html/project.html
+++ b/src/html/project.html
@@ -9,10 +9,10 @@
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "./", "active": "project"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">
+        <main class="m-auto font-crimson-text text-lg font-semibold text-gray-900 sm:w-full md:w-4/5">
             <!-- 1. -->
-            <div class="mb-6 flex">
-                <span class="p-2">
+            <div class="mb-6 flex justify-between">
+                <span class="w-1/2 p-2">
                     Brotherland berichtet von einer Zeit, von der man nur schwer erzählen kann. Die Komplexität der Wendejahre und ihr Erbe
                     wird durch die Kontextualisierung von Fotos, Archivmaterial und Portraits - verknüpft mit Interviews - dargestellt.
                 </span>
@@ -20,8 +20,13 @@
                     <!-- Image placeholders: -->
                     <a href="virtual-exhibits/ve1.html">
                         <div
-                            class="h-80 w-96 rounded-sm bg-slate-600 transition-colors ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
-                        ></div>
+                            class="h-96 w-full rounded-sm object-contain transition-colors ease-linear grayscale hover:grayscale-0 hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
+                        >
+                            <img
+                                src="/public/images/Zaninelli_Jacobs_BROTHERLAND_The Truth Lies in Rostock_ 02.jpg"
+                                class="h-full"
+                            />
+                        </div>
                     </a>
                 </div>
             </div>
@@ -79,6 +84,34 @@
                         ></div>
                     </a>
                 </div>
+            </div>
+            <!-- 4. -->
+            <div class="mb-6 flex">
+                <div class="p-2">
+                    <!-- Image placeholders: -->
+                    <a href="virtual-exhibits/ve3.html">
+                        <div
+                            class="h-full w-96 rounded-sm bg-slate-600 transition-colors ease-linear hover:cursor-[url(/public/images/75.jpg),_pointer] hover:rounded-lg hover:bg-slate-400"
+                        ></div>
+                    </a>
+                </div>
+                <span class="p-2">
+                    <p>
+                        In der tagesaktuellen Berichterstattung und auch der Geschichtsschreibung kamen – und kommen – die Menschen, gegen
+                        die sich diese Gewalt richtete, selten zu Wort. Auf die Fragen, wieso (deutsche) Jugendliche den Hitlergruß machen
+                        oder wieso der Rassismus in den neuen Bundesländern womöglich „verständlich“ sei, wurde erheblich mehr Gewicht
+                        gelegt. Wir haben ehemalige Vertragsarbeiter:innen aus Angola, Mosambik und Vietnam interviewt und porträtiert. In
+                        den Interviews erzählen sie von ihren Erlebnissen während der Wende. Ebenso haben wir uns aber auch entschieden,
+                        Deutsche zu interviewen, die in den in den 1990er-Jahren in Hoyerswerda, Eberswalde und Rostock gelebt haben, um
+                        mehr von den/ihren Lebensrealitäten während und nach der Wende zu erfahren.
+                    </p>
+                    <p>
+                        Die Fotos wurden an den Orten aufgenommen, an denen die Anschläge stattfanden, und zeigen sie in einer zeitlosen
+                        Dimension. Die Stillleben und das Archivmaterial konzentrieren sich auf die Spektakularisierung der Ereignisse und
+                        auf verschiedene Facetten der Gewalt. In der Summe soll <span class="italic">Brotherland</span> die Stimmung
+                        deutlich machen, in der die Angriffe stattgefunden haben und von einer breiten Masse legitimiert wurden.
+                    </p>
+                </span>
             </div>
         </main>
     </body>
