--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,50 @@
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland - Martina Zaninelli"}' />
     </head>
 
-    <body class="absolute w-full bg-white pb-16 text-gray-700">
-        <div class="flex flex-col items-center justify-between">
-            <div class="h-[75vh] w-[75vw] rounded-sm bg-gray-500"></div>
+    <body class="bg-white text-gray-700">
+        <div class="flex flex-row place-items-center">
+            <div class="h-screen w-1/2 rounded-sm bg-gray-500 p-1 object-contain">
+                <img src="../public/images/Zaninelli_Jacobs_BROTHERLAND_01.jpg" class="h-full"/>
+            </div>
+            <div class="w-1/2 font-playfair-display text-2xl font-medium uppercase">
+                <nav>
+                    <a href="./html/project.html" alt="Project">
+                        <div
+                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
+                        >
+                            Project
+                        </div>
+                    </a>
+                    <a href="#" alt="Interviews">
+                        <div
+                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
+                        >
+                            Interviews
+                        </div>
+                    </a>
+                    <a href="./html/about.html" alt="About">
+                        <div
+                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
+                        >
+                            About
+                        </div>
+                    </a>
+                    <a href="./html/book.html" alt="Book">
+                        <div
+                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
+                        >
+                            Book
+                        </div>
+                    </a>
+                    <a href="./html/exhibits.html" alt="Exhibits">
+                        <div
+                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
+                        >
+                            Exhibits
+                        </div>
+                    </a>
+                </nav>
+            </div>
         </div>
-        <div class="mb-2 h-4" />
-        <nav>
-            <include src="./partials/nav.html" locals='{"pathNavPrefix": "./html", "active": "index"}'></include>
-        </nav>
     </body>
 </html>
