--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -12,6 +12,7 @@
         <main class="m-auto sm:w-full md:w-4/5">
             Virtual Exhibit 3
             <br />
+            <a href="./ve4.html" alt="Virtual Exhibit 2">Next: Virtual Exhibit 4</a>
         </main>
     </body>
 </html>
