--- a/src/html/interviews/intrvw_ia02.html
+++ b/src/html/interviews/intrvw_ia02.html
@@ -23,7 +23,7 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
                 ],
                 author: "Ibraimo Alberto",
                 authorLink: "../bio.html#alberto",
-                audioFilePath: "/public/audio/IA_ 02.mp3",
+                audioFilePath: "/public/audio/IA_02.mp3",
                 imageFilePath: "/public/images/IA_ 02.jpg",
                 imageCaption: "Neonazis auf einer Montagsdemonstration in Leipzig",
             },
@@ -31,10 +31,12 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Ibraimo Alberto 2"}' />
+        <include src="./partials/head.html"
+            locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Ibraimo Alberto 2"}' />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700"
+        onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "intrvw_ia02"}'></include>
         </header>
@@ -63,4 +65,5 @@ solange die Gruppe nicht gekommen, die gegen uns waren, die angeblich Nachfolger
             </div>
         </main>
     </body>
+
 </html>
