--- a/src/html/interviews/intrvw_dm01.html
+++ b/src/html/interviews/intrvw_dm01.html
@@ -17,7 +17,7 @@
                 ],
                 author: "David Macou",
                 authorLink: "../bio.html#macou",
-                audioFilePath: "/public/audio/DM_ 01.mp3",
+                audioFilePath: "/public/audio/DM_01.mp3",
                 imageFilePath: "/public/images/DM_ 01.jpg",
                 imageCaption: "Postcard of Hoyerswerda, 70ies",
             },
@@ -25,10 +25,12 @@
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - David Macou 1"}' />
+        <include src="./partials/head.html"
+            locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - David Macou 1"}' />
     </head>
 
-    <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
+    <body class="bg-white text-gray-700"
+        onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "intrvw_dm01"}'></include>
         </header>
@@ -58,4 +60,5 @@
             </div>
         </main>
     </body>
+
 </html>
