--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -1,18 +1,156 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 3"}' />
+        <include src="./partials/head.html"
+            locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 2"}' />
     </head>
 
-    <body class="bg-white text-gray-700">
+    <body class="bg-white">
         <header>
             <include src="./partials/nav_header.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto sm:w-full md:w-4/5">
-            Virtual Exhibit 3
+        <main class="m-auto flex flex-col sm:w-full md:w-4/5 font-crimson-text font-semibold text-sm text-gray-900">
+            Virtual Exhibit 2
+
+            <div class="flex h-[30rem]">
+                <div class="relative flex min-h-min basis-1/2 flex-col justify-center pr-1">
+                    <span class="text-left pr-20">
+                        Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so
+                        erzogen worden in der
+                        Schule, aber wenn du es im Nachhinein betrachtest, war überhaupt gar kein Kontakt gewollt mit
+                        den Ausländern.
+                    </span>
+
+                    <!-- Audio -->
+                    <div class="flex w-full justify-center pt-4">
+                        <include src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'></include>
+                    </div>
+                </div>
+                <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
+                    <!-- Plattenbauten Hoch -->
+                    <div class="relative h-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_06.jpg"
+                            class="absolute h-full w-full object-cover" />
+                    </div>
+                    <!-- Plattenbauten mittelhoch -->
+                    <div class="relative h-full overflow-hidden rounded-sm pt-2">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_07.jpg"
+                            class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-12 flex h-[40rem]">
+                <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
+                    <!-- Hausecke; türkise Fenster -->
+                    <div class="relative mr-12 h-3/4 overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_08.jpg"
+                            class="absolute h-full w-full object-cover" />
+                    </div>
+
+                    <!-- Audio "Die kannten keine Schwarzen" -->
+                    <div class="mb-20 flex w-full justify-center">
+                        <include src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": ""}'>
+                        </include>
+                    </div>
+                </div>
+                <div class="flex basis-1/2 flex-col justify-end pl-1">
+                    <!-- Feuerzeug -->
+                    <div class="relative ml-8 mt-24 h-3/4 overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_09.jpg"
+                            class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex h-[60rem] pt-14">
+                <div class="basis-2/3 pr-8 pb-24">
+                    <!-- Nahaufnahme Interviewpartner -->
+                    <div class="relative h-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_010.jpg"
+                            class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+                <div class=" mt-auto basis-1/3">
+                    <!-- Text "Damals in der DDR hat man.."  -->
+                    <span>
+                        Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die.
+                        Wenn wir in die
+                        Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“, oder: „Es
+                        kommt die Kohle“.
+                        Und dann haben wir gemerkt, es geht um unserer [Haut]Farbe. Aber wir konnten nichts machen, wir
+                        wollten lernen und
+                        arbeiten
+                    </span>
+                </div>
+            </div>
+
+            <div class="flex h-[40rem] pt-24">
+                <div class="flex w-full flex-col justify-between">
+                    <!-- Schwimmbad -->
+                    <div class="relative h-full w-full overflow-hidden -mt-12 rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
+                    </div>
+
+                    <!-- Audio unterhalb v. Schwimmbad -->
+                    <div class="-mb-16 flex w-full justify-center">
+                        <include src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschatliches Verhältnis"}'>
+                        </include>
+                    </div>
+                </div>
+
+                <div class="z-10 -mx-32 w-full pt-44">
+                    <!-- Audio zw. Schwimmbad & Datsche -->
+                    <div class="flex w-full justify-center">
+                        <include src="./partials/interv_audio.html"
+                            locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'>
+                        </include>
+                    </div>
+                </div>
+
+                <div class="w-full pt-32">
+                    <!-- Datsche -->
+                    <div class="relative h-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_012.jpg"
+                            class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+            </div>
+
+            <div class="relative mt-36 flex h-[60rem] w-full">
+                <div class="flex w-3/5 flex-col justify-between">
+                    <!-- Baum -->
+                    <div class="relative mt-44 h-full w-full overflow-hidden rounded-sm">
+                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_013.jpg"
+                            class="absolute h-full w-full object-cover" />
+                    </div>
+                </div>
+
+                <div class="flex w-2/5 flex-col items-start justify-start pl-4">
+                    <div>
+                        Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von
+                        Jugendlichen, die sagen
+                        sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie
+                        euch nicht gemocht“.
+                    </div>
+                    <div class="mt-4">„Warum?“</div>
+                    <div class="z-10 -ml-[33rem] text-center text-7xl  font-sans text-red-600">
+                        WEIL DU
+                        SCHWARZ BIST
+                    </div>
+                    <div class="mt-4">Wir hatten Angst.</div>
+                    <div>Das war in Berlin 1982-1983.</div>
+
+                </div>
+            </div>
             <br />
-            <a href="./ve4.html" alt="Virtual Exhibit 2">Next: Virtual Exhibit 4</a>
+            <a href="./ve3.html" alt="Virtual Exhibit 3">Next: Virtual Exhibit 3</a>
         </main>
     </body>
+
 </html>
