--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland - Martina Zaninelli"}' />
+        <include src="./partials/head.html"
+            locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland - Martina Zaninelli"}' />
     </head>
 
     <body class="bg-white text-gray-700">
         <div class="flex flex-row place-items-center">
-            <div class="h-screen w-1/2 rounded-sm bg-gray-500 p-1 object-contain">
-                <img src="../public/images/Zaninelli_Jacobs_BROTHERLAND_01.jpg" class="h-full"/>
+            <div class="relative h-screen w-1/2 p-1">
+                <img src="../public/images/Zaninelli_Jacobs_BROTHERLAND_01.jpg" class="h-full w-full object-cover" />
             </div>
             <div class="w-1/2 font-playfair-display text-2xl font-medium uppercase">
                 <nav>
                     <a href="./html/project.html" alt="Project">
-                        <div
-                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
-                        >
+                        <div class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3">
                             Project
                         </div>
                     </a>
                     <a href="#" alt="Interviews">
-                        <div
-                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
-                        >
+                        <div class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3">
                             Interviews
                         </div>
                     </a>
                     <a href="./html/about.html" alt="About">
-                        <div
-                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
-                        >
+                        <div class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3">
                             About
                         </div>
                     </a>
                     <a href="./html/book.html" alt="Book">
-                        <div
-                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
-                        >
+                        <div class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3">
                             Book
                         </div>
                     </a>
                     <a href="./html/exhibits.html" alt="Exhibits">
-                        <div
-                            class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3"
-                        >
+                        <div class="rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300 w-1/3">
                             Exhibits
                         </div>
                     </a>
@@ -50,4 +42,5 @@
             </div>
         </div>
     </body>
+
 </html>
